# algorithm

./: CMakeLists.txt  LICENSE
BinaryTree/Common/: generator.h  node.h
BinaryTree/PreorderTravel/: main.cpp
